src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail54.jova
class Test{



}

class OtherClass{

}


class Main {

  public int main() {
    int var;
    bool boolean;
    x = 3;
    var = x + 2;
    var = x - 2;
    var = x * 2;
    var = x / 2;
    var = x % 2;
    boolean = x > 2;
    boolean = x && 2;
    boolean = x || 2;
    boolean = !x;
    return 0;
    }
}

